# montaigne

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.claude/: settings.local.json
.claude/commands/: presentation-video.md
.claude/skills/presentation-video/: DOCX_EXTRACTION.md  SCRIPT_FORMAT.md  SKILL.md
.claude/skills/presentation-video/scripts/: extract_docx.py
.github/workflows/: python-publish.yml  test.yml
blackNruff/: 01-introduction.md  02-pytest-fundamentals.md  03-fixtures.md  04-mocking.md  05-black.md  06-ruff.md  07-github-actions.md  08-best-practices.md  README.md
demo/hamlet/: Hamlet_A_Tragedy_Of_Justice_voiceover.md  hamlet_voiceover_script.md
demo/kant/: The_Mind_s_Architecture_Kant_and_the_Limits_of_Knowledge_voiceover.md  kant_voiceover_script.md
demo/montaigne/: The_Man_In_The_Tower_Montaigne_s_Search_voiceover.md  chapitre_27_montaigne.md
kant/: __init__.py  __main__.py  audio.py  cli.py  images.py
montaigne/: README.md  __init__.py  __main__.py  annotation.py  annotation_server.py  app.py  audio.py  branding.py  cli.py  cloud_api.py  cloud_config.py  cloud_storage.py  config.py  coqui_tts.py  elevenlabs_tts.py  gui.py  images.py  logging.py  media_cli.py  pdf.py  ppt.py  scripts.py  test_elevenlabs.sh  video.py
tests/: __init__.py  conftest.py  test_audio.py  test_cli.py  test_config.py  test_pdf.py  test_progress.py  test_scripts.py
website/: index.html
