[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montaigne"
version = "0.4.0"
description = "Media processing toolkit for presentation localization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yann Debray"}
]
keywords = ["gemini", "ai", "localization", "pdf", "audio", "tts", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
essai = "montaigne.cli:main"

[project.urls]
Homepage = "https://github.com/ydebray/montaigne"
Documentation = "https://github.com/ydebray/montaigne#readme"
Repository = "https://github.com/ydebray/montaigne"

[tool.setuptools.packages.find]
include = ["montaigne*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
