[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montaigne"
version = "0.9.1"
description = "Media processing toolkit for presentation localization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yann Debray"}
]
keywords = ["gemini", "ai", "localization", "pdf", "audio", "tts", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "elevenlabs>=2.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
webapp = [
    "streamlit>=1.30.0",
]
annotate = [
    "flask>=3.0.0",
]
cloud = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "google-cloud-storage>=2.10.0",
    "python-multipart>=0.0.6",
]
all = [
    "montaigne[dev,webapp,cloud,annotate]",
]

[project.scripts]
essai = "montaigne.cli:main"

[project.urls]
Homepage = "https://github.com/yanndebray/montaigne"
Documentation = "https://github.com/yanndebray/montaigne#readme"
Repository = "https://github.com/yanndebray/montaigne"

[tool.setuptools.packages.find]
include = ["montaigne*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["montaigne"]
omit = ["montaigne/__main__.py", "montaigne/media_cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
